added picture and acco. readme

--- a/readme.html
+++ b/readme.html
@@ -12,9 +12,9 @@
 
     <p>Every summer, South Korea experiences significant property and human life damages due to typhoons. Accurate typhoon track prediction, which entails precise forecasting of the path and intensity of a typhoon during its development phase, is paramount. Such predictions provide relevant institutions and residents with the time needed for pre-emptive measures and responses, thus preventing potential damages in advance.</p>
 
-    <p>Our project targets this issue by constructing a typhoon track prediction using <span style="color:#2980b9"><strong>FourCastNet</strong></span>, a weather forecasting model based on the Fourier Neural Operator (FNO).</p>
+    <p>Our project targets this issue by constructing a typhoon track prediction using <a href="https://docs.nvidia.com/deeplearning/modulus/modulus-sym/user_guide/neural_operators/fourcastnet.html"><span style="color:#2980b9"><strong>FourCastNet(FCN)</strong></span></a>, a weather forecasting model based on the Fourier Neural Operator (FNO).</p>
 
-    <p>Our team used data from typhoons that have affected Korea to predict the trajectory of typhoons using a pre-trained FCN model. This project underscores the intersection of cutting-edge AI technology and meteorology to improve the accuracy of typhoon predictions, with the aim of minimizing potential damage through early warnings.</p>
+    <p>In our project, we focused on studying the integration of FCN, which was trained on ERA5 data, <strong>with the JMA Best Track data</strong>. This effort aims to harness the robust predictive power of FCN and the highly accurate historical records of the JMA to enhance the accuracy and efficiency of our weather forecasting model.</p>
 
     <p>For instance, the HINNAMNOR typhoon that hit Korea from August to September in 2022 underscores the necessity of such systems. If we could have accurately predicted the path of Typhoon HINNAMNOR in advance, more effective responses could have been made to reduce the damages.</p>
 
