--- a/readme.html
+++ b/readme.html
@@ -4,7 +4,7 @@
     <hr />
 
     <div style="display: flex; justify-content: center;">
-        <p><img alt="" src="https://ifh.cc/g/YhQYrB.gif" style="float:left; height:188px; width:400px"/></p>
+        <p><img alt="" src="https://ifh.cc/g/LpMSHN.jpg" style="float:left; height:230px; width:400px"/></p>
     </div>
 
     <p>&nbsp;</p>
