--- a/readme.html
+++ b/readme.html
@@ -1,24 +1,34 @@
-<p style="text-align:center"><strong><span style="font-size:26px">[NVIDIA] Typhoon Track Prediction Using FCN</span></strong></p>
-
-<div style="padding-left: 100px; padding-right: 100px;">
-    <hr />
-
-    <div style="display: flex; justify-content: center;">
-        <p><img alt="" src="https://ifh.cc/g/LpMSHN.jpg" style="float:left; height:230px; width:400px"/></p>
-    </div>
-
-    <p>&nbsp;</p>
-
-
-    <p>Every summer, South Korea experiences significant property and human life damages due to typhoons. Accurate typhoon track prediction, which entails precise forecasting of the path and intensity of a typhoon during its development phase, is paramount. Such predictions provide relevant institutions and residents with the time needed for pre-emptive measures and responses, thus preventing potential damages in advance.</p>
-
-    <p>Our project targets this issue by constructing a typhoon track prediction using <a href="https://docs.nvidia.com/deeplearning/modulus/modulus-sym/user_guide/neural_operators/fourcastnet.html"><span style="color:#2980b9"><strong>FourCastNet(FCN)</strong></span></a>, a weather forecasting model based on the Fourier Neural Operator (FNO).</p>
-
-    <p>In our project, we focused on studying the integration of FCN, which was trained on ERA5 data, <strong>with the JMA Best Track data</strong>. This effort aims to harness the robust predictive power of FCN and the highly accurate historical records of the JMA to enhance the accuracy and efficiency of our weather forecasting model.</p>
-
-    <p>For instance, the HINNAMNOR typhoon that hit Korea from August to September in 2022 underscores the necessity of such systems. If we could have accurately predicted the path of Typhoon HINNAMNOR in advance, more effective responses could have been made to reduce the damages.</p>
-
-    <p>If you&#39;re interested in understanding what typhoons are, how they form, and how we can predict their path, explore our website. It provides not only basic information about typhoons and weather forecasting but also details on how our FourCastNet model operates. This information will help raise your understanding of typhoons and increase awareness of how we can protect ourselves from these natural disasters.</p>
-
-    <p>&nbsp;</p>
+<style>
+    .container {margin: 0 480px; /* 좌우에 20px의 공백을 줍니다 */}
+</style>
+<p style="text-align:center"><strong><span style="font-size:26px">Typhoon Track Forecast Service</span></strong></p>
+<!--<hr />-->
+<div class="container">
+    <p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;<a href="https://ifh.cc/v-h8yZyk" target="_blank"><img src="https://ifh.cc/g/h8yZyk.jpg" style="height:250px; width:500px" /></a></p>
 </div>
+<p style="text-align:center"><sup>Global Typhoons Track.</sup><strong>&nbsp;<sup>&copy;</sup></strong><sup>Wikipedia</sup></p>
+
+<p><span style="font-size:16px">&nbsp; Every summer, South Korea experiences significant damage from typhoons. With global warming causing an increase in typhoon intensity, accurate prediction of the typhoon&#39;s path and strength at the early stages is crucial. Providing sufficient lead time for response measures can help prevent potential damages.</span></p>
+
+<p><span style="font-size:16px">&nbsp; For instance, the typhoon HINNAMNOR, which hit South Korea from August to September in 2022, highlights the importance of precise path prediction systems. If the path of typhoon HINNAMNOR had been accurately predicted, the damages could have been mitigated.</span></p>
+
+<p><span style="font-size:16px">&nbsp;&nbsp;Our project targets this issue by constructing a typhoon track prediction using <a href="http://docs.nvidia.com/deeplearning/modulus/modulus-v2209/user_guide/neural_operators/fourcastnet.html">FourCastNet(FCN)</a>, a weather forecasting model based on the Fourier Neural Operator (FNO). Our team focused on studying the integration of FCN, which was trained on European Centre for Medium-Range Weather Forecasts</span><span style="font-size:16px">&nbsp;Reanalysis v5 data(<a href="https://www.ecmwf.int/en/forecasts/dataset/ecmwf-reanalysis-v5">ERA5 data</a>)</span><span style="font-size:16px">, with the <a href="https://www.jma.go.jp/jma/index.html">JMA Best Track data</a>. This effort aims to harness the robust predictive power of FCN and the highly accurate historical records of the JMA to enhance the accuracy and efficiency of our weather forecasting model.</span></p>
+
+<p><span style="font-size:16px">&nbsp; If you are interested in typhoon prediction using deep learning models, visit our website. It provides not only fundamental information about typhoon path prediction but also detailed insights into how our model operates.&nbsp;This information will enhance the understanding of typhoons and raise awareness of how we can protect ourselves from their impacts.</span></p>
+
+<p>&nbsp;</p>
+
+<hr />
+<p><strong>Data analysis</strong>&nbsp;: How the FourCastNet model works and how it predicts typhoons movement. if you need detail information, please see <strong>Details.</strong></p>
+
+<p><strong>Future prediction</strong> : Provides information on the current location of the typhoon, the expected damage to each region of South Korea.</p>
+
+<p><strong>Details</strong> : Describes the traditional weather forecasting methods and their limitations, and explains why AI technology was introduced. In addition, it provides a detailed process of how the FCN model works and the data and variables used. You can see the improved forecast performance on this page.</p>
+
+<p><strong>About us</strong> : For contact us, Provides information about the members in this project.&nbsp;</p>
+
+<p>&nbsp;</p>
+
+<p style="text-align:right"><strong><span style="font-size:16px">NIMS, ABLEARN, NVIDIA</span></strong></p>
+
+<p style="text-align:right"><strong><span style="font-size:14px">Team Typhoon Sensei</span></strong></p>
