--- a/aboutus.html
+++ b/aboutus.html
@@ -1,11 +1,14 @@
 <p style="text-align:center"><strong><span style="font-size:26px">Team Typhoon Sensei</span></strong></p>
 
-<p style="text-align:center">NVIDIA 1팀</p>
+<p style="text-align:center">NVIDIA TEAM</p>
 
 <p style="margin-left:40px"><a href="https://ifh.cc/g/M0a7fl.png"><img alt="" src="https://ifh.cc/g/M0a7fl.png" style="border-style:solid; border-width:0px; float:left; height:120px; margin:10px 30px; width:120px" /></a><strong><span style="font-size:20px">Jiho Ko</span></strong></p>
 
 <p style="margin-left:120px">Graduate student at Pohang University of Science and Technology (POSTECH)&rsquo;s &nbsp;Climate System Lab.</p>
-<p style="margin-left:120px">veniton97@posteh.ac.kr</p>
+
+<p style="margin-left:120px">Contribution - Modified the inference file and performed ensemble techniques to improve the model.</p>
+
+<p style="margin-left:120px">veniton97@postech.ac.kr</p>
 
 <p style="margin-left:120px">&nbsp;</p>
 
@@ -16,6 +19,9 @@
 <p style="margin-left:40px"><a href="https://ifh.cc/g/tvyVbA.jpg"><img alt="" src="https://ifh.cc/g/GtQjNl.png" style="border-style:solid; border-width:0px; float:left; height:120px; margin:10px 30px; width:120px" /></a><strong><span style="font-size:20px">Gunwoo Do</span></strong></p>
 
 <p style="margin-left:120px">Graduate student at Korea Maritime &amp; Ocean University&rsquo;s Climate Science Lab. &nbsp;</p>
+
+<p style="margin-left:120px">Contribution -&nbsp;Conducted research for figures used in the presentation and also visualized the prediction of Typhoon Kong-rey for every time period to aid in forecasting.</p>
+
 <p style="margin-left:120px">rjsdn613@g.kmou.ac.kr</p>
 
 <p style="margin-left:120px">&nbsp;</p>
@@ -27,6 +33,9 @@
 <p style="margin-left:40px"><a href="https://ifh.cc/g/tvyVbA.jpg"><img alt="" src="https://ifh.cc/g/OXtmRf.png" style="border-style:solid; border-width:0px; float:left; height:120px; margin:10px 30px; width:120px" /></a><strong><span style="font-size:20px">Changi Lee</span></strong></p>
 
 <p style="margin-left:120px">Graduate student at Chonnam National University&rsquo;s Climate Science Lab. My major is education, but I interested in climate and atmospheric science.</p>
+
+<p style="margin-left:120px">Contribution -&nbsp;Visualized the Typhoon Impact Radius and wrote the project introduction for the first page in the UI.</p>
+
 <p style="margin-left:120px">lcki7465@gmail.com</p>
 
 <p style="margin-left:120px">&nbsp;</p>
@@ -38,6 +47,9 @@
 <p style="margin-left:40px"><a href="https://ifh.cc/g/tvyVbA.jpg"><img alt="" src="https://ifh.cc/g/1rVQZ5.png" style="border-style:solid; border-width:0px; float:left; height:120px; margin:10px 30px; width:120px" /></a><strong><span style="font-size:20px">Dasom Ryu</span></strong></p>
 
 <p style="margin-left:120px">Graduate student at Korea Maritime &amp; Ocean University&rsquo;s Climate Science Lab. &nbsp;</p>
+
+<p style="margin-left:120px">Contribution -&nbsp;Visualized the prediction of Typhoon Kong-rey for every time period and collected script data for forecasting.</p>
+
 <p style="margin-left:120px">dassomi74@g.kmou.ac.kr</p>
 
 <p style="margin-left:120px">&nbsp;</p>
@@ -46,10 +58,12 @@
 
 <p style="margin-left:120px">&nbsp;</p>
 
-
 <p style="margin-left:40px"><a href="https://ifh.cc/g/tvyVbA.jpg"><img alt="" src="https://ifh.cc/g/snMXwj.png" style="border-style:solid; border-width:0px; float:left; height:120px; margin:10px 30px; width:120px" /></a><strong><span style="font-size:20px">Jinwan Joo</span></strong></p>
 
 <p style="margin-left:120px">Student at Kyungpook National University&rsquo;s Mesoscale Weather Extremes Lab.</p>
+
+<p style="margin-left:120px">Contribution -&nbsp;Developed 3D visualizations for typhoon starting points, especially in summer and fall, and wrote the detail page in the UI.</p>
+
 <p style="margin-left:120px">wnwlsdhkss@gmail.com</p>
 
 <p style="margin-left:120px">&nbsp;</p>
@@ -61,6 +75,9 @@
 <p style="margin-left:40px"><a href="https://ifh.cc/g/tvyVbA.jpg"><img alt="" src="https://ifh.cc/g/XyzSjP.png" style="border-style:solid; border-width:0px; float:left; height:120px; margin:10px 30px; width:120px" /></a><strong><span style="font-size:20px">Haedo Baek</span></strong></p>
 
 <p style="margin-left:120px">Graduate student at Chungnam National University`s Ocean Climate Dynamics LAB.</p>
+
+<p style="margin-left:120px">Contribution -&nbsp;Visualized sea level pressure and searched for research papers for the presentation.</p>
+
 <p style="margin-left:120px">dmstjhey@gmail.com</p>
 
 <p style="margin-left:120px">&nbsp;</p>
@@ -72,4 +89,7 @@
 <p style="margin-left:40px"><a href="https://ifh.cc/g/tvyVbA.jpg"><img alt="" src="https://ifh.cc/g/cXBrJk.png" style="border-style:solid; border-width:0px; float:left; height:120px; margin:10px 30px; width:120px" /></a><strong><span style="font-size:20px">YELIM KIM</span></strong></p>
 
 <p style="margin-left:120px">Research Assistant at Seoul National University&#39;s Weather and Climate Dynamics Lab, I bring my strong foundation in Automation and a keen interest in Machine Learning to the forefront of meteorological research.</p>
-<p style="margin-left:120px">sedagrq821@126.com</p>
+
+<p style="margin-left:120px">Contribution - Handled overall management, developed the UI, and improved the model,&nbsp;created and presented the PPT,</p>
+
+<p style="margin-left:120px">dreamlimkim@gmail.com</p>
