--- a/details.html
+++ b/details.html
@@ -135,4 +135,5 @@
 <p style="text-align:justify">&nbsp;</p>
 
 <p style="text-align:justify">&nbsp;</p>
+<p style="text-align:center"><span style="font-size:20px"><strong>You can find <span style="color:#e74c3c"><span style="text-align:center">more information</span></span> about our presentation explanation <a href="https://velog.io/@yelim421/hackathonppt"><span style="color:#e74c3c">here</span></a></strong></span></p>
 </div>
