--- a/readme.html
+++ b/readme.html
@@ -15,8 +15,9 @@
 <p><span style="font-size:16px">&nbsp;&nbsp;Our project targets this issue by constructing a typhoon track prediction using <a href="http://docs.nvidia.com/deeplearning/modulus/modulus-v2209/user_guide/neural_operators/fourcastnet.html">FourCastNet(FCN)</a>, a weather forecasting model based on the Fourier Neural Operator (FNO). Our team focused on studying the integration of FCN, which was trained on European Centre for Medium-Range Weather Forecasts</span><span style="font-size:16px">&nbsp;Reanalysis v5 data(<a href="https://www.ecmwf.int/en/forecasts/dataset/ecmwf-reanalysis-v5">ERA5 data</a>)</span><span style="font-size:16px">, with the <a href="https://www.jma.go.jp/jma/index.html">JMA Best Track data</a>. This effort aims to harness the robust predictive power of FCN and the highly accurate historical records of the JMA to enhance the accuracy and efficiency of our weather forecasting model.</span></p>
 
 <p><span style="font-size:16px">&nbsp; If you are interested in typhoon prediction using deep learning models, visit our website. It provides not only fundamental information about typhoon path prediction but also detailed insights into how our model operates.&nbsp;This information will enhance the understanding of typhoons and raise awareness of how we can protect ourselves from their impacts.</span></p>
+<p style="text-align:center">&nbsp;</p>
 
-<p>&nbsp;</p>
+<p style="text-align:center"><span style="font-size:20px"><strong>You can find <span style="color:#e74c3c">more information</span> about our presentation explanation <a href="https://velog.io/@yelim421/hackathonppt"><span style="color:#e74c3c">here</span></a></strong></span></p>
 
 <hr />
 <p><strong>Data analysis</strong>&nbsp;: How the FourCastNet model works and how it predicts typhoons movement. if you need detail information, please see <strong>Details.</strong></p>
